--- a/gb/16/5/14/n7894265.md
+++ b/gb/16/5/14/n7894265.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/rgjxmt3702/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rgjxmt3702/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rgjxmt3702/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rgjxmt3702/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rgjxmt3702/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rgjxmt3702/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rgjxmt3702/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rgjxmt3702/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/rgjxmt3702/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/rgjxmt3702/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rgjxmt3702/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rgjxmt3702/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rgjxmt3702/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rgjxmt3702/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>纽约万人游行 法轮功学员述心声（2）</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/05/1605132220021500-600x400.jpg" />
 <h6>2016年5月13日，近万名来自世界各地的部分法轮功学员汇聚纽约，欢庆第17届世界法轮大法日。（陈懿胜／大纪元）
 </h6>
 <hr>
-<p>【大纪元2016年05月14日讯】（大纪元记者陈懿胜美国<ahref="https://github.com/rgjxmt3702/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>报导）2016年5月13日，近万名来自世界各地的部分法轮功学员汇聚纽约，欢庆第17届世界<ahref="https://github.com/rgjxmt3702/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">法轮大法日</a>。当日，<ahref="https://github.com/rgjxmt3702/djy/blob/master/gb/tag/%E6%B8%B8%E8%A1%8C.md#1">游行</a>队伍分成大法洪传、制止迫害、九评三退三个部分由联合国公园出发，沿着<ahref="https://github.com/rgjxmt3702/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>42大街举行盛大<ahref="https://github.com/rgjxmt3702/djy/blob/master/gb/tag/%E6%B8%B8%E8%A1%8C.md#1">游行</a>。</p>
-<figure id="attachment_7894311" aria-describedby="caption-attachment-7894311" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/05/1605132210041500.jpg"><img class="size-large wp-image-7894311" title="" src="https://i.epochtimes.com/assets/uploads/2016/05/1605132210041500-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-7894311" class="wp-caption-text">来自台湾的大学生刘沅瓒参加在纽约举行的第17届世界<ahref="https://github.com/rgjxmt3702/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">法轮大法日</a>。（陈懿胜／大纪元）</figcaption></figure>
+<p>【大纪元2016年05月14日讯】（大纪元记者陈懿胜美国<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>报导）2016年5月13日，近万名来自世界各地的部分法轮功学员汇聚纽约，欢庆第17届世界<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">法轮大法日</a>。当日，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B8%B8%E8%A1%8C.md#1">游行</a>队伍分成大法洪传、制止迫害、九评三退三个部分由联合国公园出发，沿着<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>42大街举行盛大<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B8%B8%E8%A1%8C.md#1">游行</a>。</p>
+<figure id="attachment_7894311" aria-describedby="caption-attachment-7894311" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/05/1605132210041500.jpg"><img class="size-large wp-image-7894311" title="" src="https://i.epochtimes.com/assets/uploads/2016/05/1605132210041500-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-7894311" class="wp-caption-text">来自台湾的大学生刘沅瓒参加在纽约举行的第17届世界<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">法轮大法日</a>。（陈懿胜／大纪元）</figcaption></figure>
 <p>来自台湾的大学生刘沅瓒表示，自己是在2000年得法的，是妈妈带着他一起修炼，不过那时候只有小学一年级，对于修炼还是蒙懞懂懂，并没有认真在修炼，直到大学一年级的时候，才了解到法轮功的“真善忍”的本质，也开始真正做一位大法弟子。</p>
 <p>刘沅瓒接着说，今年是第2次参加纽约法会，参加法会期间自己有参与发传单的讲真相活动，虽然不一定每个人都愿意接受传单，但是自己会禀持的正念坚持发下去，因为真相需要让世人看到，了解中国的法轮功学员正受到中共的迫害，不能让它继续下去。</p>
 <figure id="attachment_7894312" aria-describedby="caption-attachment-7894312" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/05/1605132227021500.jpg"><img class="size-large wp-image-7894312" title="" src="https://i.epochtimes.com/assets/uploads/2016/05/1605132227021500-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-7894312" class="wp-caption-text">2016年5月13日，近万名来自世界各地的部分法轮功学员汇聚纽约，欢庆第17届世界法轮大法日。图为来自德国的朱乔士。（陈懿胜／大纪元）</figcaption></figure>
@@ -48,47 +48,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/14/5/17/n4157681.md#1">世界各地法轮功学员纽约盛大游行 庆祝法轮大法日</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/16/5/8/n7874398.md#1">【直播】世界法轮大法日纽约万人大游行</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/16/5/13/n7893422.md#1">纽约万人游行庆祝世界法轮大法日（组图1）</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/16/5/13/n7893530.md#1">组图2：纽约万人游行庆祝第17届法轮大法日</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/6/n13215062.md#1">组图三：中国古典舞大赛青年组金奖得主风采</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/6/n13214978.md#1">组图二：中国古典舞大赛少年组金奖得主风采</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/6/n13213430.md#1">女子青年组金奖得主杨美莲：艺无止境</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/6/n13214293.md#1">组图一：中国古典舞大赛少年组金奖得主风采</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/6/n13213481.md#1">纽约法拉盛浸死人的街区 多年前是一个大池塘</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/6/n13213337.md#1">纽约皇后区遇难一家三口邻居：警察本可救他们</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/5/17/n4157681.md#1">世界各地法轮功学员纽约盛大游行 庆祝法轮大法日</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/5/8/n7874398.md#1">【直播】世界法轮大法日纽约万人大游行</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/5/13/n7893422.md#1">纽约万人游行庆祝世界法轮大法日（组图1）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/5/13/n7893530.md#1">组图2：纽约万人游行庆祝第17届法轮大法日</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690281.md#1">飞机引擎技术 中共输在哪里？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690284.md#1">郑小清涉盗GE机密案 被判共谋经济间谍罪</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690243.md#1">公交线路重新设计 法拉盛5月10日公听</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690175.md#1">见义勇为抓歹徒 父子获国会褒奖</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690183.md#1">在基层与官员间架起桥梁 臧东慧竞选民主党党代表</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690149.md#1">减轻驾驶负担 康州停征汽油税</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/29/n9782273.md#1" target="_blank">高天韵：锡盖特博物馆 唤醒罗马尼亚的记忆</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/5/13/n7891043.md#1" target="_blank">永恒的感恩</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/3/n9919603.md#1" target="_blank">王江火：“抗美援朝”不具备正义性</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/26/n4648466.md#1" target="_blank">在法轮大法中修炼重生的宁德人（二）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/2/n13205792.md#1">【未解之谜】 不懂中文 会唱中文歌 邓丽君归来？</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/7/23/n13108846.md#1">【命理】清朝时风水征验人宅吉凶的一些事</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/8/27/n13191066.md#1">古人最常用的化妆品是什么？</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/8/29/n13196066.md#1">告别进化论</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/3/n13208933.md#1">北洋女学教授转生三世容貌相同 写书讲果报</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/8/19/n13171609.md#1">【直播】2021全世界中国古典舞大赛决赛</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/4/n13210934.md#1">【财商天下】北京调控过猛 楼市有大危机</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/5/n13211486.md#1">美版《星岛日报》被列外国代理人 学者分析</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/3/n13209059.md#1">赵薇遭封杀 林心如一动作获赞“有先见之明”</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/4/n13210281.md#1">曹兴诚后悔大陆设厂 专家：联电在台湾重返荣耀</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/4/n13210242.md#1">【十字路口】菅义伟闪辞3原因 攸关世界格局</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/3/n13209059.md#1">赵薇遭封杀 林心如一动作获赞“有先见之明”</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/3/n13208868.md#1">为何近年只当厨师不拍电影？谢霆锋感伤回应</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/3/n13209273.md#1">工作室微博被禁言至今 赵丽颖9月行程成谜</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/5/n13212708.md#1">中共重拳整肃娱乐圈 范冰冰演艺路恐彻底截断</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/4/n13210487.md#1">《尚气与十环传奇》影评：漫威献给东方人的诚意大礼！</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/3/n13208358.md#1">空气炸锅做的这些蔬菜 好吃得停不下来</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/5/n13211418.md#1">小猫在门口挡人 小狗奉主人之命把它拖走</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/4/n13210581.md#1">以色列成疫情惨重国 疫苗防疫有6大问题</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/2/n13205789.md#1">生活中处处藏毒素 黑豆、绿豆加1物解百毒</a></li>
-<li><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/21/9/4/n13210320.md#1">一个常见烹饪错误 让你胆固醇升高</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962674.md#1">意大利口罩被谁买空？意媒驳中共救援谎言</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962341.md#1">对北京掩盖疫情失望 川普：中共非常诡秘</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963263.md#1">【一线采访】武汉市民：对政府彻底失望</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962520.md#1">企业家吁召开紧急会议 矛头直指中共最高层</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/rgjxmt3702/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/rgjxmt3702/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/5/14/n7894265.htm">纽约万人游行 法轮功学员述心声（2）</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/5/14/n7894265.htm">纽约万人游行 法轮功学员述心声（2）</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/rgjxmt3702/djy/blob/master/gb/16/5/14/n7894265.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rgjxmt3702/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rgjxmt3702/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rgjxmt3702/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rgjxmt3702/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/16/5/14/n7894265.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
